# dotzilla

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: add.rs  commit.rs  diff.rs  init.rs  link.rs  list.rs  mod.rs  remove.rs  stage.rs  status.rs  unlink.rs  unstage.rs
src/generator/: mod.rs
src/models/: dotfile.rs  mod.rs  path.rs  path_name.rs
src/tui/: app.rs  mod.rs  ui.rs
src/utils/: confirm.rs  diff_tools.rs  filter.rs  mod.rs  path.rs  path_compare.rs
