[package]
name = "dotzilla"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to manage dotfiles with symbolic linking and staging capabilities"
authors = ["Rodrigo Bernardi <rodrigo@rbernardi.dev>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
home = "0.5"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diffy = "0.4"
fs_extra = "1.3"
colored = "3.0"
which = "7.0"
