[package]
name = "dotzilla-cli"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to manage dotfiles with symbolic linking and staging capabilities"
authors = ["Rodrigo Bernardi <rodrigo@rbernardi.dev>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/snakeice/dotzilla"

[[bin]]
name = "dotzilla"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5.47"
colored = "3.0"
diffy = "0.4"
env_logger = "0.11"
fs_extra = "1.3"
home = "0.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "7.0"
